kubernetes_deployement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodejs-service
spec:
  selector:
    app: sample-nodejs   
  ports:
    - protocol: TCP
      port: 8080          
      targetPort: 3000    
  type: ClusterIP
