kubernetes_deployement/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nodejs-ingress
spec:
  rules:
    - host: sample-nodejs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-nodejs-service   
                port:
                  number: 3000
